...

  //renders the entire posts screen with the given modal and list of posts.
  //modals will cover the screen, if not the posts will render
  return (
    <SafeAreaView style={styles.container}>
      <SearchBar
        testID='searchBar'
        containerStyle={{backgroundColor: '#73000a'}}
        inputContainerStyle={{borderRadius: 20, backgroundColor: '#FFF'}}
        onChangeText={setSearch}
        placeholder="Search a post by the author's name"
        value={search}></SearchBar>
      {posts.length == 0 && (
...
