export const classes = [
  {label: 'Freshman', value: 'Freshman'},
  {label: 'Sophomore', value: 'Sophomore'},
  {label: 'Junior', value: 'Junior'},
  {label: 'Senior', value: 'Senior'},
  {label: 'Alumni', value: 'Alumni'},
];

export const majors = [
  {label: 'Accounting', value: 'Accounting'},
  {label: 'Advertising', value: 'Advertising'},
  {label: 'African American Studies', value: 'African American Studies'},
  {label: 'Anthropology', value: 'Anthropology'},
  {label: 'Art Education', value: 'Art Education'},
  {label: 'Art History', value: 'Art History'},
  {label: 'Art Studio', value: 'Art Studio'},
  {label: 'Athletic Training', value: 'Athletic Training'},
  {
    label: 'Biochemistry and Molecular Biology',
...
